--- a/index.html
+++ b/index.html
@@ -7,29 +7,20 @@
 </head>
 <body>
 
-   <!-- <header>
-    <nav>
-      <a href="index.html">Home</a>
-      <a href="about.html">About</a>
-      <a href="product.html">Product</a>
-      <a href="service.html">Service</a>
-      <a href="contact.html">Contact us</a>
-    </nav>
-  </header><br><br> -->
-
-
-
-  <header bgcolor="#f0f0f0">
-  <center><b style="background-color:  whitesmoke">
-    <a href="index.html">Home</a> | 
-    <a href="product.html">Menu</a>  |
-    <a href="service.html">Reserve a table</a> |
-    <a href="about.html">About</a> |
-    <a href="contact.html">Contact us</a>
-  </center>
+  
+<header style="background-color:#f0f0f0; padding: 10px;">
+  <nav style="background-color:orchid; padding:15px; margin:10px 0 5px; text-align:right;">
+    <a href="index.html" style="color:white; text-decoration:none; margin:0 10px; font-weight:bold;">Home</a> |
+    <a href="product.html" style="color:white; text-decoration:none; margin:0 10px; font-weight:bold;">Menu</a> |
+    <a href="service.html" style="color:white; text-decoration:none; margin:0 10px; font-weight:bold;">Reserve a table</a> |
+    <a href="about.html" style="color:white; text-decoration:none; margin:0 10px; font-weight:bold;">About</a> |
+    <a href="contact.html" style="color:white; text-decoration:none; margin:0 10px; font-weight:bold;">Contact us</a>
+  </nav>
 </header>
-<br>
-<br>
+<br><br>
+
+
+
 
     
     <!-- <video width="1250" height="560" controls autoplay loop  poster="Images/c1.jpg">
@@ -42,7 +33,7 @@
 <br>
 <br>
 
-<p><b>Welcome to Cafe Rhythms, where exceptional flavors meet the 
+<p><b><i>Welcome to Cafe Rhythms, where exceptional flavors meet the 
     enchantment of live music. Nestled in the heart of the city,
      our cafe offers a warm and inviting atmosphere that delights all the senses. 
      From the moment you step through our doors, you'll be embraced by the aromas 
@@ -56,7 +47,7 @@
       From soulful jazz to upbeat acoustic melodies, our events promise an evening of 
       enchantment and toe-tapping rhythms. Join us at Cafe Rhythms, where culinary delights and live music converge, 
       and let us serenade your senses with an extraordinary symphony of flavors and melodies.</b></p>
-   
+</i></b>
 <br><br>
 
 <table align="center" cellpadding="20">
