--- a/contact.html
+++ b/contact.html
@@ -7,17 +7,17 @@
 </head>
 <body>
 
-     <header bgcolor="#f0f0f0">
-  <center><b style="background-color:  whitesmoke">
-    <a href="index.html">Home</a> | 
-    <a href="product.html">Menu</a>  |
-    <a href="service.html">Reserve a table</a> |
-    <a href="about.html">About</a> |
-    <a href="contact.html">Contact us</a>
-  </center>
+     <header style="background-color:#f0f0f0; padding: 10px;">
+  <nav style="background-color:orchid; padding:15px; margin:10px 0 5px; text-align:right;">
+    <a href="index.html" style="color:white; text-decoration:none; margin:0 10px; font-weight:bold;">Home</a> |
+    <a href="product.html" style="color:white; text-decoration:none; margin:0 10px; font-weight:bold;">Menu</a> |
+    <a href="service.html" style="color:white; text-decoration:none; margin:0 10px; font-weight:bold;">Reserve a table</a> |
+    <a href="about.html" style="color:white; text-decoration:none; margin:0 10px; font-weight:bold;">About</a> |
+    <a href="contact.html" style="color:white; text-decoration:none; margin:0 10px; font-weight:bold;">Contact us</a>
+  </nav>
 </header>
-<br>
-<br>
+<br><br>
+
 
   
 
